// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use for Azure AI: Search, Speech, Foundry, OpenAI, Document Intelligence. Helps with search, vector/hybrid search, speech-to-text, text-to-speech, transcription, AI agents, prompt flows, OCR. USE FOR: AI Search, query search, vector search, hybrid search, speech-to-text, text-to-speech, transcribe, AI agent, prompt flow, Foundry, OCR, convert text to speech. DO NOT USE FOR: Function apps/Functions (use azure-functions), databases (azure-postgres/azure-kusto), resources.",
  "extractedKeywords": [
    "agent",
    "agents",
    "apps",
    "azure",
    "azure-functions",
    "azure-kusto",
    "azure-postgres",
    "cli",
    "convert",
    "databases",
    "deploy",
    "document",
    "flow",
    "flows",
    "foundry",
    "function",
    "functions",
    "helps",
    "hybrid",
    "intelligence",
    "mcp",
    "openai",
    "prompt",
    "query",
    "resources",
    "search",
    "speech",
    "speech-to-text",
    "text",
    "text-to-speech",
    "transcribe",
    "transcription",
    "vector",
    "with",
  ],
  "name": "azure-ai",
}
`;

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "apps",
  "azure",
  "azure-functions",
  "azure-kusto",
  "azure-postgres",
  "cli",
  "convert",
  "databases",
  "deploy",
  "document",
  "flow",
  "flows",
  "foundry",
  "function",
  "functions",
  "helps",
  "hybrid",
  "intelligence",
  "mcp",
  "openai",
  "prompt",
  "query",
  "resources",
  "search",
  "speech",
  "speech-to-text",
  "text",
  "text-to-speech",
  "transcribe",
  "transcription",
  "vector",
  "with",
]
`;
